environments/gloo-mesh-core/east-region-ambient/egress/base/egress-client/client.yaml
apiVersion: v1
kind: Service
metadata:
  name: egress-client
  namespace: client
  labels:
    app: egress-client
spec:
  ports:
  - port: 5000
    name: http
  selector:
    name: egress-client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egress-client-deployment
  namespace: client
  labels:
    app: egress-client
spec:
  replicas: 1
  selector:
    matchLabels:
      name: egress-client
  template:
    metadata:
      labels:
        name: egress-client
        istio.io/rev: 1-23
    spec:
      serviceAccountName: egress-client
      containers:
      - name: egress-client
        image: ably77/curl-ui:0.7.3
        ports:
        - containerPort: 5000
