environments/gloo-mesh-core/east-region-ambient/egress/base/egress-client/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egress-client
  namespace: client
spec:
  hosts:
  - "client.ambient.gmc.glooplatform.com"
  gateways:
  - istio-system/https-gateway
  http:
  - name: frontend
    match:
    - uri:
        prefix: "/egress"
    route:
    - destination:
        host: egress-client
        port:
          number: 5000
